Fix a crashes when undoing multiple layer operations too quickly

This patch solve the whole bunch of issues that happened when the dummies
graph was updated too quickly:

1) Implements a clever strategy for processing not-yet-added nodes
   in KisDummiesFacadeBase::setImage(). Instead of just asserting on
   detection of such nodes, we track a "theoretical" set of nodes that
   will be present in the dummies graph after all synchronized connections
   are executed.

2) KisSynchronizedConnectionBase::postEvent() will not bariier-sync with
   the main events queue when the event is processed in the GUI thread.

3) Fixes minor mutex usage issues in KisSynchronizedConnection

4) KisNodeModel will no longer try to fetch a thumbnail from the layer
   that has been removed from the image.

BUG:447462