libs/ui/KisApplication.h
@@ -87,6 +87,8 @@ public:
     void loadPlugins();
     void loadGuiPlugins();
     void initializeGlobals(const KisApplicationArguments &args);
+    void processPostponedSynchronizationEvents();
+
 
 public Q_SLOTS:
 
